fix: PhpStorm path

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -91,7 +91,7 @@ alias dcdu="docker-compose down && docker-compose up -d"
 #######################################
 export PATH=$PATH:~/.local/bin
 export PATH=$PATH:~/.config/composer/vendor/bin
-export PATH=$PATH:/opt/PhpStorm-203.5981.175/bin
+export PATH=$PATH:/opt/PhpStorm/bin
 
 
 
