change: add copyfile and zsh-autosuggestions plugins

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -20,12 +20,14 @@ ZSH_THEME="ys"
 
 # Plugins to load
 plugins=(
+  copyfile
   git
   gitignore
   extract
   fasd
   docker
   docker-compose
+  zsh-autosuggestions
 )
 
 prompt_context() {
